VK link target changed to blank page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="city">Moscow</div>
 		<div class="social">
 			<ul>
-				<li><a href="https://vk.com/saferif"><span data-icon="&#xe003;"></span></a></li>
+				<li><a href="https://vk.com/saferif" target="_blank"><span data-icon="&#xe003;"></span></a></li>
 				<li><a href="skype:saferif?chat"><span data-icon="&#xe00a;"></span></a></li>
 				<li><a href="mailto:saferif@gmail.com"><span data-icon="&#xe023;"></span></a></li>
 			</ul>
