--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="content">
 		<div class="photo"></div>
 		<div class="name">Insaf Latypov</div>
-		<div class="city">Moscow</div>
+		<div class="city">London</div>
 		<div class="social">
 			<ul>
 				<li><a href="https://vk.com/saferif" target="_blank"><span data-icon="&#xe003;"></span></a></li>
